# sudocode

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LAST_CCB_REF_VERSION  LAST_PARITY_SYNC_COMMIT  LICENSE  README.md  README_zh.md  ROADMAP.html  ROADMAP.md  install.sh  sudo-code-roadmap.html
.claude/: settings.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: check_doc_source_of_truth.py
.github/workflows/: claude-code-review.yml  claude.yml  installer-preview.yml  model-compat.yml  release.yml  rust-ci.yml  subagent-parity-live.yml
docs/: README.md  acp.md  authentication.md  container.md  linux-bundle-install.zh-CN.md  linux-deb-install.md  mock-parity-harness.md  models.md  parity-claw-code-sync-2026-W24.md  parity.md  permissions-and-sandbox.md  plugins.md  plugins_zh.md  usage.md
docs/design/: agent-context-storage-matrix.html  image-handling-non-user-facing.html  image-handling-non-user-facing.md  nexus-workspace-dtlink-reply.html
docs/plans/: README.md
docs/plans/active/: bash-mode-design.md  tui-enhancement.md
docs/plans/archive/: 2026-05-20-log-optimization.md
docs/superpowers/plans/: 2026-07-21-linux-deb-installer.md  2026-07-22-linux-bundle-installer.md
notes/plans/: conversation-interrupt-queue-sudocode.md
packaging/macos/: postinstall  scode-setup.sh
packaging/windows/: scode.iss  scode_config_setting.iss
rust/: .gitignore  CLAUDE.md  Cargo.toml  MOCK_PARITY_HARNESS.md  README.md  SPIKE-179-s1-s2-s3.md  USAGE.md
rust/.cargo/: config.toml
rust/crates/api/: Cargo.toml
rust/crates/api/benches/: request_building.rs
rust/crates/api/src/: client.rs  error.rs  http_transport.rs  lib.rs  prompt_cache.rs  sse.rs  types.rs
rust/crates/api/src/providers/: anthropic.rs  codex.rs  gemini.rs  mod.rs  openai_compat.rs  registry.rs
rust/crates/api/tests/: client_integration.rs  openai_compat_integration.rs  provider_client_integration.rs  proxy_integration.rs
rust/crates/commands/: Cargo.toml
rust/crates/commands/src/: lib.rs
rust/crates/compat-harness/: Cargo.toml
rust/crates/compat-harness/src/: lib.rs
rust/crates/mock-anthropic-service/: Cargo.toml
rust/crates/mock-anthropic-service/src/: lib.rs
rust/crates/nexus-vfs-client/: Cargo.toml  build.rs
rust/crates/nexus-vfs-client/proto/nexus/grpc/vfs/: vfs.proto
rust/crates/nexus-vfs-client/src/: lib.rs
rust/crates/plugins/: Cargo.toml
rust/crates/plugins/bundled/browser/.sudocode-plugin/: plugin.json
rust/crates/plugins/bundled/browser/skills/browser/: SKILL.md
rust/crates/plugins/src/: hooks.rs  lib.rs
rust/crates/runtime/: Cargo.toml
rust/crates/runtime/benches/: bash_pipe_throughput.rs
rust/crates/runtime/src/: acp_sdk_server.rs  acp_stdio_server.rs  acp_web_ui.html  acp_ws_server.rs  agent_color.rs  agent_mailbox.rs  bash.rs  compact.rs  config.rs  config_validate.rs  conversation.rs  coordinator_mode.rs  coordinator_notification.rs  cron_registry.rs  cron_schedule.rs  custom_agents.rs  file_intent.rs  file_ops.rs  file_redirect.rs  file_snapshot.rs  file_tracker.rs  fs_backend.rs  hooks.rs  image_registry.rs  jsonrpc_transport.rs  lane_events.rs  lib.rs  mcp.rs  mcp_client.rs  mcp_connection.rs  mcp_headers_helper.rs  mcp_http.rs  mcp_managed_proxy.rs  mcp_ndjson_transport.rs  mcp_oauth.rs  mcp_remote.rs  mcp_server.rs  mcp_server_manager.rs  mcp_sse.rs  mcp_stdio.rs  (+22 more)
rust/crates/runtime/src/memory/: entry.rs  index.rs  loader.rs  mod.rs
rust/crates/runtime/src/skill/: discovery.rs  dispatch.rs  mod.rs  registry.rs
rust/crates/runtime/src/subagent/: dispatch.rs  mod.rs  registry.rs
rust/crates/runtime/tests/: agent_mailbox_roundtrip.rs  compaction_persist.rs  coordinator_gate.rs  coordinator_push_wire.rs  fork_dispatch_context.rs  integration_tests.rs  session_pre_seed.rs  spawn_task.rs  task_notification_render.rs
rust/crates/rusty-sudocode-cli/: Cargo.toml  build.rs
rust/crates/rusty-sudocode-cli/src/: init.rs  input.rs  input_queue.rs  main.rs  render.rs  repl_async.rs  vlm_describe.rs
rust/crates/rusty-sudocode-cli/src/cli/: api_client.rs  args.rs  cron.rs  doctor.rs  export.rs  format.rs  git.rs  help.rs  lifecycle.rs  mcp.rs  mod.rs  pager.rs  session.rs  status.rs  tool_executor.rs  undo.rs
rust/crates/rusty-sudocode-cli/tests/: acp_integration.rs  acp_live_smoke.rs  cli_flags_and_config_defaults.rs  compact_output.rs  interrupt_e2e.rs  mock_parity_harness.rs  output_format_contract.rs  plugin_prompt_injection.rs  pty_agent_memory_scoping.rs  pty_agent_permission_bubble.rs  pty_agent_summary.rs  pty_arrow_keys.rs  pty_bash_execution.rs  pty_cancel.rs  pty_compact.rs  pty_config_discovery.rs  pty_coordinator_mode.rs  pty_coordinator_push.rs  pty_core_conversation.rs  pty_cron.rs  pty_custom_agents.rs  pty_error_paths.rs  pty_file_operations.rs  pty_fork_subagent.rs  pty_image_handling.rs  pty_mcp_tool.rs  pty_memory.rs  pty_model_compat.rs  pty_plan_mode.rs  pty_presets_e2e.rs  pty_proxy_passthrough.rs  pty_repl_async_batched_flush.rs  pty_repl_async_interrupt.rs  pty_repl_async_queue.rs  pty_repl_async_up_dequeue.rs  pty_resume.rs  pty_send_message.rs  pty_send_message_multi_turn.rs  pty_session_management.rs  pty_sleep.rs  (+9 more)
rust/crates/rusty-sudocode-cli/tests/common/: mod.rs  openai_compat_mock.rs
rust/crates/telemetry/: Cargo.toml
rust/crates/telemetry/src/: lib.rs
rust/crates/telemetry/tests/: sudoclaw_sink_integration.rs
rust/crates/tools/: .gitignore  Cargo.toml
rust/crates/tools/src/: lane_completion.rs  lib.rs  managed_agent.rs  pdf_extract.rs
rust/crates/tools/tests/: agent_abort_registry.rs  agent_color_assignment.rs  agent_output_wire_schema.rs  agent_permission_bubble.rs  agent_summary_threshold.rs  agent_telemetry_pipeline.rs  coordinator_dispatch_guard.rs  coordinator_push_notification.rs  fork_prompt_cache_prefix.rs  subagent_multi_turn_loop.rs  task_list_backgrounded.rs  verification_streak.rs
rust/scripts/: run_mock_parity_diff.py  run_mock_parity_harness.sh
scripts/: analyze_scode_log.py  dogfood-build.sh  fmt.sh  roadmap-prio-column.py  triage_claw_code.py
(+9 files in other folders)
