[package]
name = "sudocode-compat-harness"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Compatibility harness for the sudocode CLI."
repository = "https://github.com/sudoprivacy/sudocode"
homepage = "https://github.com/sudoprivacy/sudocode"
keywords = ["ai", "agent", "llm", "cli"]
categories = ["command-line-utilities", "development-tools"]
readme = "../../README.md"
authors = ["sudoprivacy"]
publish = true

[dependencies]
commands = { path = "../commands", package = "sudocode-commands", version = "0.1.7" }
tools = { path = "../tools", package = "sudocode-tools", version = "0.1.7" }
runtime = { path = "../runtime", package = "sudocode-runtime", version = "0.1.7" }

[lints]
workspace = true
