[package]
name = "nexus-vfs-client"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
tonic = { version = "0.13", features = ["transport"] }
prost = "0.13"
tokio = { version = "1", features = ["rt", "net", "time"] }
serde_json = { workspace = true }

[build-dependencies]
tonic-build = "0.13"
protoc-bin-vendored = "3"

[lints]
workspace = true
