[package]
name = "sudocode-nexus-vfs-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "gRPC VFS client for sudocode remote filesystem access."
repository = "https://github.com/sudoprivacy/sudocode"
homepage = "https://github.com/sudoprivacy/sudocode"
keywords = ["ai", "agent", "llm", "cli", "grpc"]
categories = ["command-line-utilities", "development-tools"]
readme = "../../README.md"
authors = ["sudoprivacy"]
publish = true

[dependencies]
tonic = { version = "0.13", features = ["transport"] }
prost = "0.13"
tokio = { version = "1", features = ["rt", "net", "time"] }
serde_json = { workspace = true }

[build-dependencies]
tonic-build = "0.13"
protoc-bin-vendored = "3"

[lints]
workspace = true
