[package]
name = "sudocode-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core runtime for the sudocode CLI — session, permissions, MCP, file ops."
repository = "https://github.com/sudoprivacy/sudocode"
homepage = "https://github.com/sudoprivacy/sudocode"
keywords = ["ai", "agent", "llm", "cli", "runtime"]
categories = ["command-line-utilities", "development-tools"]
readme = "../../README.md"
authors = ["sudoprivacy"]
publish = true

[dependencies]
agent-client-protocol = { workspace = true }
agent-client-protocol-schema = { workspace = true }
agent-client-protocol-tokio = { workspace = true }
async-trait = "0.1"
axum = { workspace = true }
base64 = "0.22"
chrono = "0.4"
futures = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
sha2 = "0.10"
glob = "0.3"
keyring = "3"
nexus-vfs-client = { path = "../nexus-vfs-client", package = "sudocode-nexus-vfs-client", version = "0.1.7" }
plugins = { path = "../plugins", package = "sudocode-plugins", version = "0.1.7" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
telemetry = { path = "../telemetry", package = "sudocode-telemetry", version = "0.1.7" }
tokio = { version = "1", features = ["io-std", "io-util", "macros", "process", "rt", "rt-multi-thread", "sync", "time"] }
tower-http = { workspace = true }
walkdir = "2"

[lints]
workspace = true
