[package]
name = "runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
agent-client-protocol = { workspace = true }
agent-client-protocol-schema = { workspace = true }
agent-client-protocol-tokio = { workspace = true }
async-trait = "0.1"
axum = { workspace = true }
base64 = "0.22"
chrono = "0.4"
futures = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# Nexus kernel rlib — provides `kernel::abi::KernelAbi` trait that
# `runtime::spawn_task::<K>` is generic over. `default-features =
# false` keeps the kernel runtime defaults (mimalloc, connector
# stack, py-hook adapters) off in the sudocode build — sudocode does
# not need them and they would bloat the standalone CLI.
#
# Points at nexus-vfs main (the kernel crate's canonical home after
# the DRY repo extraction, #4259).
kernel = { git = "https://github.com/nexi-lab/nexus-vfs", default-features = false }
sha2 = "0.10"
glob = "0.3"
keyring = "3"
nexus-vfs-client = { path = "../nexus-vfs-client" }
plugins = { path = "../plugins" }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
telemetry = { path = "../telemetry" }
tokio = { version = "1", features = ["io-std", "io-util", "macros", "process", "rt", "rt-multi-thread", "sync", "time"] }
tower-http = { workspace = true }
walkdir = "2"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["poll", "process"] }

[target.'cfg(unix)'.dev-dependencies]
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
libc = "0.2"

[[bench]]
name = "bash_pipe_throughput"
harness = false

[lints]
workspace = true
