[package]
name = "rusty-sudocode-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "scode"
path = "src/main.rs"

[dependencies]
api = { path = "../api" }
arboard = { version = "3", features = ["image-data"] }
async-trait = "0.1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
commands = { path = "../commands" }
compat-harness = { path = "../compat-harness" }
crossterm = "0.28"
futures = "0.3"
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
pulldown-cmark = "0.13"
rustyline = "15"
runtime = { path = "../runtime" }
plugins = { path = "../plugins" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
telemetry = { path = "../telemetry" }
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
sha2 = "0.10"
syntect = "5"
tokio = { version = "1", features = ["rt-multi-thread", "signal", "time"] }
tools = { path = "../tools" }
unicode-width = "0.2"

[lints]
workspace = true

[dev-dependencies]
flate2 = "1"
futures-util = "0.3"
mock-anthropic-service = { path = "../mock-anthropic-service" }
pty-expect.workspace = true
serde_json.workspace = true
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread"] }
tokio-tungstenite = "0.29"

